--- a/docs/笔记.md
+++ b/docs/笔记.md
@@ -34,3 +34,10 @@ after: require('./mock/mock-server.js')
 # Background application url
 BACKGROUND_APPLICATION_URL = 'http://localhost:8080'
 ```
+4.element框架 table错位
+>在项目入口文件
+```js
+.el-table th.gutter{
+    display: table-cell!important;
+}
+```
