更新电脑配置单和歌单

--- a/docs/我的歌单.md
+++ b/docs/我的歌单.md
@@ -1,16 +1,20 @@
 ### 我的歌单
-苏慧伦《鸭子》
-许哲佩《气球》
-许慧欣《七月七日晴》
-万芳《新不了情》
-李慧珍《爱死了昨天》
-李丽芬《爱江山更爱美人》
-裘海正《爱我的人和我爱的人》
-娃娃《漂洋过海来看你》
-潘美辰《我想有个家》
-顺子《回家》
-黄小琥《没那么简单》
-李翊君《雨蝶》
-孟庭苇《静悄悄的玫瑰羞答答地开》
-高胜美《千年等一回》
-程响《世界这么大还是遇见你》
+苏慧伦《鸭子》  
+许哲佩《气球》  
+许慧欣《七月七日晴》  
+万芳《新不了情》  
+李慧珍《爱死了昨天》  
+李丽芬《爱江山更爱美人》  
+裘海正《爱我的人和我爱的人》  
+娃娃《漂洋过海来看你》  
+潘美辰《我想有个家》  
+顺子《回家》  
+黄小琥《没那么简单》  
+李翊君《雨蝶》  
+孟庭苇《静悄悄的玫瑰羞答答地开》  
+高胜美《千年等一回》  
+程响《世界这么大还是遇见你》  
+孙燕姿《遇见》  
+徐良/汪苏泷《后会无期》  
+潘玮柏/邓紫棋/艾热《攀登》  
+邹玲儿《少年》  
