--- a/docs/电脑配置.md
+++ b/docs/电脑配置.md
@@ -1,14 +1,18 @@
-## 组装电脑配置清单（自用）
+## 2019自己组装电脑配置清单
 |配件|型号|价格|来源|
 |:---:|:---|:---:|:---:|
-|CPU|英特尔 (Intel) I5-9600K 酷睿六盒 盒装CPU处理器|3369|京东|
+|CPU|英特尔 (Intel) I5-9600K 酷睿六盒 盒装CPU处理器|3369.00|京东|
 |主板|MSI/微星 MPG Z390 GAMING PRO CARBON 暗黑版主板 (Intel Z390/LGA 1151)|CPU套装|京东|
-|内存|芝奇(G.SKILL)幻光戟系列 DDR4 3000频率 16G台式机内存 RGB灯条(C16) * 2|899、799|京东|
-|显卡|七彩虹(Colorful)iGame1060烈焰战神 S-6GD5Top 6G192bit吃鸡显卡|1599|京东|
-|散热|待定|--|--|
-|SSD|英特尔(Intel) 760P系列 256G NVMe M.2 2280接口 SSD固态硬盘|429|京东|
-|HDD|待定|--|--|
-|机箱|酷冷至尊(coolermaster) MasterBox Lite 5(睿) 台式电脑主机中塔机箱 (ATX主板/前镜面板/侧透/独立电源仓)|299|京东|
-|电源|Tt(Thermaltake)额定500W TR2-500 电源(80plus金牌)/主动PFC/全电压/智能温控/背部走线|219|京东|
-|显示器|优派 27英寸显示器 60HZ办公窄边框全面屏 电脑游戏PLS色彩显示器 VX2771-shv|849|京东|
-|合计||8462||
+|内存|芝奇(G.SKILL)幻光戟系列 DDR4 3000频率 16G台式机内存 RGB灯条(C16) * 2|899.00、799.00|京东|
+|显卡|七彩虹(Colorful)iGame1060烈焰战神 S-6GD5Top 6G192bit吃鸡显卡|1599.00|京东|
+|显卡支架|酷冷至尊(Cooler Master)显卡支撑架|68.90|京东|
+|散热|酷冷至尊T400i|110.00|百脑汇|
+|风扇|九州风神机箱风扇 散热器套装 魔环120RGB三联包风扇|114.00|京东|
+|SSD|英特尔(Intel) 760P系列 256G NVMe M.2 2280接口 SSD固态硬盘|429.00|京东|
+|HDD|西部数据(WD)蓝盘 4TB SATA6GB/s 64MB 台式机械硬盘(WD40EZRZ)|649.00|京东|
+|机箱|酷冷至尊(coolermaster) MasterBox Lite 5(睿) 台式电脑主机中塔机箱 (ATX主板/前镜面板/侧透/独立电源仓)|299.00|京东|
+|电源|Tt(Thermaltake)额定500W TR2-500 电源(80plus金牌)/主动PFC/全电压/智能温控/背部走线|219.00|京东|
+|显示器|优派 27英寸显示器 60HZ办公窄边框全面屏 电脑游戏PLS色彩显示器 VX2771-shv|849.00|京东|
+|音箱|漫步者(EDIFIER) R101V 蓝牙版多媒体2.1音箱|136.60|京东|
+|鼠标|罗技(G)G403有线鼠标|278.98|京东|
+|合计||9819.48||
